Update all notebooks, removing extraneous nbconvert info and making consistent with latest NRPy+ core Python modules (e.g., includes the pow(x,2) -> ((x)*(x)) update)

--- a/Tutorial-MaxwellCurvilinear.ipynb
+++ b/Tutorial-MaxwellCurvilinear.ipynb
@@ -285,10 +285,10 @@
       "   const double tmpFD11 = -1.0/12.0*AD2_i0_i1p2_i2;\n",
       "   const double tmpFD12 = invdx0*invdx1;\n",
       "   const double tmpFD13 = invdx0*invdx2;\n",
-      "   const double tmpFD14 = pow(invdx1, 2);\n",
+      "   const double tmpFD14 = ((invdx1)*(invdx1));\n",
       "   const double tmpFD15 = -5.0/2.0*AD0;\n",
-      "   const double tmpFD16 = pow(invdx2, 2);\n",
-      "   const double tmpFD17 = pow(invdx0, 2);\n",
+      "   const double tmpFD16 = ((invdx2)*(invdx2));\n",
+      "   const double tmpFD17 = ((invdx0)*(invdx0));\n",
       "   const double tmpFD18 = -5.0/2.0*AD1;\n",
       "   const double tmpFD19 = invdx1*invdx2;\n",
       "   const double tmpFD20 = -5.0/2.0*AD2;\n",
@@ -329,21 +329,21 @@
       "    *    rhs_gfs[IDX4(ED2GF, i0, i1, i2)] = -AD2/xx0**2 + AD_dD20/xx0 + AD_dDD002 - AD_dDD200 - (-AD2/xx0 + AD_dD02)/xx0 + (AD_dD02*xx0 + AD_dDD112 - (-AD2*sin(2*xx1)/(2*sin(xx1)**2) + AD_dD12)*sin(2*xx1)/(2*sin(xx1)**2) - (-AD2*sin(2*xx1)/(2*sin(xx1)**2) + AD_dD21)*sin(2*xx1)/(2*sin(xx1)**2))/xx0**2 - (AD2*(-cos(2*xx1)/sin(xx1)**2 + sin(2*xx1)*cos(xx1)/sin(xx1)**3) - AD_dD21*sin(2*xx1)/(2*sin(xx1)**2) + AD_dDD211 + xx0*(-AD2/xx0 + AD_dD20) - (-AD2*sin(2*xx1)/(2*sin(xx1)**2) + AD_dD21)*sin(2*xx1)/(2*sin(xx1)**2))/xx0**2,\n",
       "    *    rhs_gfs[IDX4(PSIGF, i0, i1, i2)] = -AD_dD00 - (AD0*xx0 + AD_dD11)/xx0**2 - (AD0*xx0*sin(xx1)**2 + AD1*sin(2*xx1)/2 + AD_dD22)/(xx0**2*sin(xx1)**2)]\"\n",
       "    */\n",
-      "   const double tmp0 = pow(xx0, -2);\n",
+      "   const double tmp0 = (1.0/((xx0)*(xx0)));\n",
       "   const double tmp1 = AD_dD00*xx0;\n",
-      "   const double tmp2 = 1.0/xx0;\n",
+      "   const double tmp2 = (1.0/(xx0));\n",
       "   const double tmp3 = AD0*xx0;\n",
       "   const double tmp4 = AD_dD11 + tmp3;\n",
       "   const double tmp5 = tmp2*tmp4;\n",
       "   const double tmp6 = sin(xx1);\n",
-      "   const double tmp7 = pow(tmp6, 2);\n",
+      "   const double tmp7 = ((tmp6)*(tmp6));\n",
       "   const double tmp8 = 2*xx1;\n",
       "   const double tmp9 = sin(tmp8);\n",
       "   const double tmp10 = (1.0/2.0)*tmp9;\n",
       "   const double tmp11 = tmp1*tmp7;\n",
       "   const double tmp12 = AD1*tmp10 + AD_dD22 + tmp3*tmp7;\n",
       "   const double tmp13 = tmp12*tmp2;\n",
-      "   const double tmp14 = 1.0/tmp7;\n",
+      "   const double tmp14 = (1.0/(tmp7));\n",
       "   const double tmp15 = tmp0*tmp14;\n",
       "   const double tmp16 = -AD1*tmp2;\n",
       "   const double tmp17 = AD_dD01 + tmp16;\n",
@@ -360,7 +360,7 @@
       "   rhs_gfs[IDX4(AD1GF, i0, i1, i2)] = -ED1 - psi_dD1;\n",
       "   rhs_gfs[IDX4(ED1GF, i0, i1, i2)] = -AD1*tmp0 + AD_dD10*tmp2 + AD_dDD001 - AD_dDD100 - tmp15*(-AD_dD22*tmp22 + AD_dDD122 - tmp10*tmp21 + tmp10*tmp4 + tmp19*(AD_dD10 + tmp16)) + tmp15*(AD1*tmp18 + AD_dD01*tmp19 + AD_dD11*tmp10 + AD_dDD212 + 2*tmp20*tmp3*tmp6 - tmp21*tmp9) - tmp17*tmp2;\n",
       "   rhs_gfs[IDX4(AD2GF, i0, i1, i2)] = -ED2 - psi_dD2;\n",
-      "   rhs_gfs[IDX4(ED2GF, i0, i1, i2)] = -AD2*tmp0 + AD_dD20*tmp2 + AD_dDD002 - AD_dDD200 + tmp0*(AD_dD02*xx0 + AD_dDD112 - tmp22*(AD_dD12 + tmp24) + tmp25) - tmp0*(AD2*(-tmp14*tmp18 + tmp20*tmp9/pow(tmp6, 3)) - AD_dD21*tmp22 + AD_dDD211 + tmp25 + xx0*(AD_dD20 + tmp23)) - tmp2*(AD_dD02 + tmp23);\n",
+      "   rhs_gfs[IDX4(ED2GF, i0, i1, i2)] = -AD2*tmp0 + AD_dD20*tmp2 + AD_dDD002 - AD_dDD200 + tmp0*(AD_dD02*xx0 + AD_dDD112 - tmp22*(AD_dD12 + tmp24) + tmp25) - tmp0*(AD2*(-tmp14*tmp18 + tmp20*tmp9/((tmp6)*(tmp6)*(tmp6))) - AD_dD21*tmp22 + AD_dDD211 + tmp25 + xx0*(AD_dD20 + tmp23)) - tmp2*(AD_dD02 + tmp23);\n",
       "   rhs_gfs[IDX4(PSIGF, i0, i1, i2)] = -AD_dD00 - tmp0*tmp4 - tmp12*tmp15;\n",
       "}\n",
       "\n"
@@ -631,10 +631,10 @@
       "   const double tmpFD15 = -1.0/12.0*AD2_i0_i1p2_i2;\n",
       "   const double tmpFD16 = (1.0/12.0)*AD2_i0_i1_i2m2;\n",
       "   const double tmpFD17 = -1.0/12.0*AD2_i0_i1_i2p2;\n",
-      "   const double tmpFD18 = pow(invdx0, 2);\n",
+      "   const double tmpFD18 = ((invdx0)*(invdx0));\n",
       "   const double tmpFD19 = -5.0/2.0*AD0;\n",
-      "   const double tmpFD20 = pow(invdx1, 2);\n",
-      "   const double tmpFD21 = pow(invdx2, 2);\n",
+      "   const double tmpFD20 = ((invdx1)*(invdx1));\n",
+      "   const double tmpFD21 = ((invdx2)*(invdx2));\n",
       "   const double tmpFD22 = -5.0/2.0*AD1;\n",
       "   const double tmpFD23 = -5.0/2.0*AD2;\n",
       "   const double tmpFD24 = (1.0/12.0)*psi_i0m2_i1_i2;\n",
@@ -685,20 +685,20 @@
       "    *    rhs_gfs[IDX4(PSIGF, i0, i1, i2)] = -Gamma,\n",
       "    *    rhs_gfs[IDX4(GAMMAGF, i0, i1, i2)] = -psi_dDD00 - (psi_dD0*xx0 + psi_dDD11)/xx0**2 - (psi_dD0*xx0*sin(xx1)**2 + psi_dD1*sin(2*xx1)/2 + psi_dDD22)/(xx0**2*sin(xx1)**2)]\"\n",
       "    */\n",
-      "   const double tmp0 = pow(xx0, -2);\n",
+      "   const double tmp0 = (1.0/((xx0)*(xx0)));\n",
       "   const double tmp1 = AD_dD00*xx0;\n",
-      "   const double tmp2 = 1.0/xx0;\n",
+      "   const double tmp2 = (1.0/(xx0));\n",
       "   const double tmp3 = AD0*xx0;\n",
       "   const double tmp4 = AD_dD11 + tmp3;\n",
       "   const double tmp5 = sin(xx1);\n",
-      "   const double tmp6 = pow(tmp5, 2);\n",
+      "   const double tmp6 = ((tmp5)*(tmp5));\n",
       "   const double tmp7 = -AD1*tmp2;\n",
       "   const double tmp8 = AD_dD01 + tmp7;\n",
       "   const double tmp9 = 2*xx1;\n",
       "   const double tmp10 = sin(tmp9);\n",
       "   const double tmp11 = (1.0/2.0)*tmp10;\n",
       "   const double tmp12 = AD1*tmp11 + AD_dD22 + tmp3*tmp6;\n",
-      "   const double tmp13 = 1.0/tmp6;\n",
+      "   const double tmp13 = (1.0/(tmp6));\n",
       "   const double tmp14 = tmp0*tmp13;\n",
       "   const double tmp15 = AD_dD10 + tmp7;\n",
       "   const double tmp16 = tmp15*xx0;\n",
@@ -715,7 +715,7 @@
       "   rhs_gfs[IDX4(AD1GF, i0, i1, i2)] = -ED1 - psi_dD1;\n",
       "   rhs_gfs[IDX4(ED1GF, i0, i1, i2)] = -AD1*tmp0 + AD_dD10*tmp2 - AD_dDD100 + Gamma_dD1 - tmp0*(AD_dD01*xx0 + AD_dDD111 + tmp16 + tmp8*xx0) - tmp14*(-AD_dD22*tmp17 + AD_dDD122 + tmp11*tmp4 - tmp12*tmp17 + tmp16*tmp6) + tmp15*tmp2;\n",
       "   rhs_gfs[IDX4(AD2GF, i0, i1, i2)] = -ED2 - psi_dD2;\n",
-      "   rhs_gfs[IDX4(ED2GF, i0, i1, i2)] = -AD2*tmp0 + AD_dD20*tmp2 - AD_dDD200 + Gamma_dD2 - tmp0*(AD2*(tmp10*cos(xx1)/pow(tmp5, 3) - tmp13*cos(tmp9)) - AD_dD21*tmp17 + AD_dDD211 - tmp13*tmp22 + tmp20) - tmp14*(AD_dD02*tmp23 + AD_dD12*tmp11 + AD_dDD222 + tmp11*(AD_dD12 + tmp21) + tmp20*tmp6 + tmp22 + tmp23*(AD_dD02 + tmp18)) + tmp19*tmp2;\n",
+      "   rhs_gfs[IDX4(ED2GF, i0, i1, i2)] = -AD2*tmp0 + AD_dD20*tmp2 - AD_dDD200 + Gamma_dD2 - tmp0*(AD2*(tmp10*cos(xx1)/((tmp5)*(tmp5)*(tmp5)) - tmp13*cos(tmp9)) - AD_dD21*tmp17 + AD_dDD211 - tmp13*tmp22 + tmp20) - tmp14*(AD_dD02*tmp23 + AD_dD12*tmp11 + AD_dDD222 + tmp11*(AD_dD12 + tmp21) + tmp20*tmp6 + tmp22 + tmp23*(AD_dD02 + tmp18)) + tmp19*tmp2;\n",
       "   rhs_gfs[IDX4(PSIGF, i0, i1, i2)] = -Gamma;\n",
       "   rhs_gfs[IDX4(GAMMAGF, i0, i1, i2)] = -psi_dDD00 - tmp0*(psi_dDD11 + tmp24) - tmp14*(psi_dD1*tmp11 + psi_dDD22 + tmp24*tmp6);\n",
       "}\n",
@@ -793,8 +793,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-MaxwellCurvilinear.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 92842 bytes to Tutorial-MaxwellCurvilinear.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
