--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -1604,10 +1604,10 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.6154100894927979 seconds.\n",
+      "Finished executing in 0.40849924087524414 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.21054744720458984 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.20885610580444336 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1656,19 +1656,19 @@
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.412437915802002 seconds.\n",
+      "Finished executing in 1.009727954864502 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.209458589553833 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.2103116512298584 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.2118916511535645 seconds.\n",
+      "Finished executing in 1.009880542755127 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.2084498405456543 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.21564912796020508 seconds.\n",
       "Finished this code cell.\n",
       "\n",
       "\n",
@@ -1744,17 +1744,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 234164 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
