--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -232,7 +232,7 @@
       "   const double phi = aux_gfs[IDX2(PHIGF, i0)];\n",
       "   const double phi_i0p1 = aux_gfs[IDX2(PHIGF, i0+1)];\n",
       "   const double phi_i0p2 = aux_gfs[IDX2(PHIGF, i0+2)];\n",
-      "   const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "   const double phi_dDD00 = ((invdx0)*(invdx0))*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -304,8 +304,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Finite_Difference_Derivatives.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 41000 bytes to Tutorial-Finite_Difference_Derivatives.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
