--- a/Tutorial-GRHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian.ipynb
@@ -914,17 +914,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GRHD_Equations-Cartesian.ipynb to latex\n",
-      "[NbConvertApp] Writing 93682 bytes to Tutorial-GRHD_Equations-Cartesian.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
