--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -192,7 +192,7 @@
       "   const double uu_i0p1 = in_gfs[IDX2(UUGF, i0+1)];\n",
       "   const double uu_i0p2 = in_gfs[IDX2(UUGF, i0+2)];\n",
       "   const double vv = in_gfs[IDX2(VVGF, i0)];\n",
-      "   const double uu_dDD00 = pow(invdx0, 2)*(-5.0/2.0*uu + (4.0/3.0)*uu_i0m1 - 1.0/12.0*uu_i0m2 + (4.0/3.0)*uu_i0p1 - 1.0/12.0*uu_i0p2);\n",
+      "   const double uu_dDD00 = ((invdx0)*(invdx0))*(-5.0/2.0*uu + (4.0/3.0)*uu_i0m1 - 1.0/12.0*uu_i0m2 + (4.0/3.0)*uu_i0p1 - 1.0/12.0*uu_i0p2);\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -202,7 +202,7 @@
       "    *    rhs_gfs[IDX2(VVGF, i0)] = uu_dDD00*wavespeed**2]\"\n",
       "    */\n",
       "   rhs_gfs[IDX2(UUGF, i0)] = vv;\n",
-      "   rhs_gfs[IDX2(VVGF, i0)] = uu_dDD00*pow(wavespeed, 2);\n",
+      "   rhs_gfs[IDX2(VVGF, i0)] = uu_dDD00*((wavespeed)*(wavespeed));\n",
       "}\n",
       "\n"
      ]
@@ -632,8 +632,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ScalarWave.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 64856 bytes to Tutorial-ScalarWave.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
