--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -302,7 +302,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 4.562561988830566 seconds.\n"
+      "Finished BSSN symbolic expressions in 2.9751033782958984 seconds.\n"
      ]
     }
    ],
@@ -509,19 +509,19 @@
      "output_type": "stream",
      "text": [
       "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
+      "Generating C code for Ricci tensor in Spherical coordinates.\n",
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Generating C code for Ricci tensor in Spherical coordinates.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.12770938873291016 seconds.\n",
-      "Finished BL initial data codegen in 6.038717031478882 seconds.\n",
+      "Finished gamma constraint C codegen in 0.10023283958435059 seconds.\n",
+      "Finished BL initial data codegen in 4.587434768676758 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 10.56939172744751 seconds.\n",
+      "Finished Hamiltonian C codegen in 8.132962226867676 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 18.211145401000977 seconds.\n",
+      "Finished BSSN_RHS C codegen in 12.14333987236023 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 44.1537446975708 seconds.\n"
+      "Finished Ricci C codegen in 29.31636333465576 seconds.\n"
      ]
     }
    ],
@@ -1056,14 +1056,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 8.825489044189453 seconds.\n",
+      "Finished executing in 5.818605422973633 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 7075.29 | gp/s 9.96e+05\n",
-      "Finished executing in 4.016986131668091 seconds.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 2226.46 | gp/s 9.91e+055\n",
-      "Finished executing in 12.440909385681152 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 15476.25 | gp/s 2.18e+06\r\n",
+      "Finished executing in 1.813605546951294 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 3904.32 | gp/s 1.74e+06\r\n",
+      "Finished executing in 7.0286970138549805 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1487,17 +1487,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb to latex\n",
-      "[NbConvertApp] Writing 160316 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
