--- a/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
+++ b/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
@@ -75,7 +75,7 @@
       "   const double phi = aux_gfs[IDX2(PHIGF, i0)];\n",
       "   const double phi_i0p1 = aux_gfs[IDX2(PHIGF, i0+1)];\n",
       "   const double phi_i0p2 = aux_gfs[IDX2(PHIGF, i0+2)];\n",
-      "   const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "   const double phi_dDD00 = ((invdx0)*(invdx0))*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -264,10 +264,10 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops finite_difference_playground.c -o fdp -lm`...\n",
-      "Finished executing in 0.20635128021240234 seconds.\n",
+      "Finished executing in 0.2099301815032959 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./fdp `...\n",
-      "Finished executing in 0.20794105529785156 seconds.\n"
+      "Finished executing in 0.21636605262756348 seconds.\n"
      ]
     }
    ],
@@ -364,10 +364,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb to latex\r\n",
-      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-Finite_Difference_Playground_files/\r\n",
-      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-Finite_Difference_Playground_files\r\n",
-      "[NbConvertApp] Writing 49063 bytes to Tutorial-Start_to_Finish-Finite_Difference_Playground.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
