GiRaFFE/A2B: Updating the unit testing architecture to validate the new algorithm.

--- a/in_progress/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -689,29 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing $outdir/driver_AtoB_new.c\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '$outdir/driver_AtoB_new.c'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-bb2511ca3270>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'writefile'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'$outdir/driver_AtoB_new.c'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n#define  compute_A2B_in_ghostzones(i0min,i0max, i1min,i1max, i2min,i2max) \\\\\\n  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) { \\\\\\n      REAL dx_Ay,dx_Az,dy_Ax,dy_Az,dz_Ax,dz_Ay; \\\\\\n      switch(i0) { \\\\\\n          case 0: \\\\\\n              dx_Ay = invdx0*(-3.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD1GF, i0+1,i1,i2)] - 1.0/2.0*in_gfs[IDX4(AD1GF, i0+2,i1,i2)]); \\\\\\n              dx_Az = invdx0*(-3.0/2.0*in_gfs[IDX4(AD2GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD2GF, i0+1,i1,i2)] - 1.0/2.0*in_gfs[IDX4(AD2GF, i0+2,i1,i2)]); \\\\\\n              break; \\\\\\n          case Nxx_plus_2NGHOSTS0-1: \\\\\\n              dx_Ay = invdx0*((3.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD1GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0-2,i1,i2)]); \\\\\\n              dx_Az = invdx0*((3.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD2GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0-2,i1,i2)]); \\\\\\n              break; \\\\\\n          default: \\\\\\n              dx_Ay = invdx0*(-1.0/2.0*in_gfs[IDX4(AD1GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0+1,i1,i2)]); \\\\\\n              dx_Az = invdx0*(-1.0/2.0*in_gfs[IDX4(AD2GF, i0-1,i1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0+1,i1,i2)]); \\\\\\n      } \\\\\\n      switch(i1) { \\\\\\n          case 0: \\\\\\n              dy_Ax = invdx1*(-3.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD0GF, i0,i1+1,i2)] - 1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1+2,i2)]); \\\\\\n              dy_Az = invdx1*(-3.0/2.0*in_gfs[IDX4(AD2GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD2GF, i0,i1+1,i2)] - 1.0/2.0*in_gfs[IDX4(AD2GF, i0,i1+2,i2)]); \\\\\\n              break; \\\\\\n          case Nxx_plus_2NGHOSTS1-1: \\\\\\n              dy_Ax = invdx1*((3.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD0GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1-2,i2)]); \\\\\\n              dy_Az = invdx1*((3.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD2GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1-2,i2)]); \\\\\\n              break; \\\\\\n          default: \\\\\\n              dy_Ax = invdx1*(-1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1+1,i2)]); \\\\\\n              dy_Az = invdx1*(-1.0/2.0*in_gfs[IDX4(AD2GF, i0,i1-1,i2)] + (1.0/2.0)*in_gfs[IDX4(AD2GF, i0,i1+1,i2)]); \\\\\\n      } \\\\\\n      switch(i2) { \\\\\\n          case 0: \\\\\\n              dz_Ax = invdx2*(-3.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD0GF, i0,i1,i2+1)] - 1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2+2)]); \\\\\\n              dz_Ay = invdx2*(-3.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2)] + 2*in_gfs[IDX4(AD1GF, i0,i1,i2+1)] - 1.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2+2)]); \\\\\\n              break; \\\\\\n          case Nxx_plus_2NGHOSTS2-1: \\\\\\n              dz_Ax = invdx2*((3.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD0GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2-2)]); \\\\\\n              dz_Ay = invdx2*((3.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2)] - 2*in_gfs[IDX4(AD1GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2-2)]); \\\\\\n              break; \\\\\\n          default: \\\\\\n              dz_Ax = invdx2*(-1.0/2.0*in_gfs[IDX4(AD0GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD0GF, i0,i1,i2+1)]); \\\\\\n              dz_Ay = invdx2*(-1.0/2.0*in_gfs[IDX4(AD1GF, i0,i1,i2-1)] + (1.0/2.0)*in_gfs[IDX4(AD1GF, i0,i1,i2+1)]); \\\\\\n      } \\\\\\n      const double gammadet = auxevol_gfs[IDX4(GAMMADETGF, i0,i1,i2)]; \\\\\\n      out_gfs[IDX4(BU0GF, i0,i1,i2)] = (dy_Az-dz_Ay)/gammadet; \\\\\\n      out_gfs[IDX4(BU1GF, i0,i1,i2)] = (dz_Ax-dx_Az)/gammadet; \\\\\\n      out_gfs[IDX4(BU2GF, i0,i1,i2)] = (dx_Ay-dy_Ax)/gammadet; \\\\\\n  }\\n\\nvoid driver_A_to_B(const paramstruct *restrict params,REAL *restrict in_gfs,REAL *restrict out_gfs) {\\n#include \"set_Cparameters.h\"\\n    const REAL invdx0 = 1.0 / dxx0;\\n    const REAL invdx1 = 1.0 / dxx1;\\n    const REAL invdx2 = 1.0 / dxx2;\\n    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\\n    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\\n#pragma omp parallel for\\n    for(int i2=imin[2];i2<imax[2];i2++) for(int i1=imin[1];i1<imax[1];i1++) for(int i0=imin[0];i0<imax[0];i0++) {\\n        // Should probably generalize this later to allow for other orders.\\n#include \"B_from_A_order2.h\"\\n    }\\n    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\\n        // After updating each face, adjust imin[] and imax[] \\n        //   to reflect the newly-updated face extents.\\n        compute_A2B_in_ghostzones(imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2]); imin[0]--;\\n        compute_A2B_in_ghostzones(imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2]); imax[0]++;\\n\\n        compute_A2B_in_ghostzones(imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2]); imin[1]--;\\n        compute_A2B_in_ghostzones(imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2]); imax[1]++;\\n\\n        compute_A2B_in_ghostzones(imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2]); imin[2]--;\\n        compute_A2B_in_ghostzones(imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1); imax[2]++;\\n    }\\n}\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/jup38/lib/python3.8/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2357\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2358\u001b[0m                 \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2359\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2360\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2361\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m</home/zetienne/jup38/lib/python3.8/site-packages/decorator.py:decorator-gen-105>\u001b[0m in \u001b[0;36mwritefile\u001b[0;34m(self, line, cell)\u001b[0m\n",
-      "\u001b[0;32m~/jup38/lib/python3.8/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    185\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup38/lib/python3.8/site-packages/IPython/core/magics/osm.py\u001b[0m in \u001b[0;36mwritefile\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    846\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    847\u001b[0m         \u001b[0mmode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'a'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 848\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    849\u001b[0m             \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '$outdir/driver_AtoB_new.c'"
+      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation/A2B//driver_AtoB_new.c\n"
      ]
     }
    ],
@@ -768,9 +753,6 @@
     "\n",
     "void driver_A_to_B(const paramstruct *restrict params,REAL *restrict in_gfs,REAL *restrict out_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
-    "    const REAL invdx0 = 1.0 / dxx0;\n",
-    "    const REAL invdx1 = 1.0 / dxx1;\n",
-    "    const REAL invdx2 = 1.0 / dxx2;\n",
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
     "    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\n",
     "#pragma omp parallel for\n",
@@ -808,15 +790,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb to latex\n",
-      "[NbConvertApp] Writing 83993 bytes to Tutorial-GiRaFFE_HO_C_code_library-A2B.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
