MoLtimestepping/C_Code_Generation.py: Rewritten to improved NRPy+ standards

--- a/in_progress/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -365,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation/A2B//driver_AtoB.c\n"
+      "Writing GiRaFFE_HO/GiRaFFE_Ccode_validation/A2B//driver_AtoB.c\n"
      ]
     }
    ],
@@ -689,14 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation/A2B//driver_AtoB_new.c\n"
+      "Writing GiRaFFE_HO/GiRaFFE_Ccode_validation/A2B//driver_AtoB_new.c\n"
      ]
     }
    ],
