Tutorial-GRFFE_Equations-Cartesian.ipynb: Fixed small typo in comments as reported by Mew-Bing. Corresponding change made in equations.py, self-validation confirmed.

--- a/Tutorial-GRFFE_Equations-Cartesian.ipynb
+++ b/Tutorial-GRFFE_Equations-Cartesian.ipynb
@@ -210,7 +210,7 @@
     "    \n",
     "    # b^0 = (u_j B^j)/[alpha * sqrt(4 pi)]\n",
     "    smallb4U[0] = u4_dot_B_notilde / (alpha*sqrt4pi)\n",
-    "    # b^i = [B^i + (u_j B^j)]/[alpha * u^0 * sqrt(4 pi)]\n",
+    "    # b^i = [B^i + (u_j B^j) u^i]/[alpha * u^0 * sqrt(4 pi)]\n",
     "    for i in range(3):\n",
     "        smallb4U[i+1] = (B_notildeU[i] + u4_dot_B_notilde*u4U[i+1]) / (alpha*u4U[0]*sqrt4pi)"
    ]
@@ -493,15 +493,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
